--- a/Hi_Core.Web/Views/Shared/_Layout.cshtml
+++ b/Hi_Core.Web/Views/Shared/_Layout.cshtml
@@ -7,7 +7,7 @@ scratch. This page gets rid of all links and provides the needed markup only.
 <head>
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <title>网站后台管理系统</title>
+    <title>XXX网站后台管理系统</title>
     <!-- Tell the browser to be responsive to screen width -->
     <meta content="width=device-width, initial-scale=1, maximum-scale=1, user-scalable=no" name="viewport">
     <!-- Bootstrap 3.3.6 -->
@@ -57,9 +57,9 @@ desired effect
             <!-- Logo -->
             <a href="" class="logo">
                 <!-- mini logo for sidebar mini 50x50 pixels -->
-                <span class="logo-mini"><b>S</b>UI</span>
+                <span class="logo-mini"><b>XXX</b></span>
                 <!-- logo for regular state and mobile devices -->
-                <span class="logo-lg"><b>Super</b>Shop</span>
+                <span class="logo-lg"><b>XXX</b></span>
             </a>
 
             <!-- Header Navbar -->
@@ -175,14 +175,14 @@ desired effect
                                 <!-- The user image in the navbar-->
                                 <img src="/Content/ui/img/photos/girl1.png" class="user-image" alt="User Image">
                                 <!-- hidden-xs hides the username on small devices so only the image appears. -->
-                                <span class="hidden-xs">TZHSWEET</span>
+                                <span class="hidden-xs">Hi</span>
                             </a>
                             <ul class="dropdown-menu">
                                 <!-- The user image in the menu -->
                                 <li class="user-header">
                                     <img src="/Content/ui/img/photos/girl1.png" class="img-circle" alt="User Image">
                                     <p>
-                                        TZHSWEET的小妞
+                                        Hi的小妞
                                         <small>2016年注册</small>
                                     </p>
                                 </li>
@@ -230,7 +230,7 @@ desired effect
                         <img src="/Content/ui/img/photos/girl1.png" class="img-circle" alt="用户头像">
                     </div>
                     <div class="pull-left info">
-                        <p>TZHSWEET</p>
+                        <p>Hi</p>
                         <!-- Status -->
                         <a href="#"><i class="fa fa-circle text-success"></i> 在线</a>
                     </div>
@@ -292,10 +292,10 @@ desired effect
         <footer class="main-footer">
             <!-- To the right -->
             <div class="pull-right hidden-xs">
-                SuperShop项目组
+                ASP.NET Core
             </div>
             <!-- Default to the left -->
-            版权所有 &copy;tzhsweet 2015-2018&nbsp;&nbsp;&nbsp;&nbsp;   粤ICP备16024545号-1
+            版权所有 &copy;Hi 2015-2018&nbsp;&nbsp;&nbsp;&nbsp;   京ICP备16024545号-1
         </footer>
         <!-- Control Sidebar -->
         <aside class="control-sidebar control-sidebar-dark">
