2018-05-29 分类模块，Info一部分

--- a/Hi_Core.Web/Views/Shared/_Layout.cshtml
+++ b/Hi_Core.Web/Views/Shared/_Layout.cshtml
@@ -50,7 +50,7 @@ desired effect
 |               | sidebar-mini                            |
 |---------------------------------------------------------|
 -->
-<body class="hold-transition skin-blue sidebar-mini fixed">
+<body class="hold-transition skin-green-light sidebar-mini fixed">
     <div class="wrapper">
         <!-- Main Header -->
         <header class="main-header">
@@ -519,7 +519,7 @@ desired effect
                     ]
                 },
                 { id: "14000", text: "业务范围", url: "/Article/Index?k=1", targetType: "iframe-tab", icon: "fa fa-circle-o" },
-                { id: "15000", text: "法律咨询", url: "/LegalAdvice/Index", targetType: "iframe-tab", icon: "fa fa-circle-o" },
+                { id: "15001", text: "法律咨询", url: "/LegalAdvice/Index", targetType: "iframe-tab", icon: "fa fa-circle-o" },
                 { id: "15000", text: "最新资讯", url: "/Article/Index?k=2", targetType: "iframe-tab", icon: "fa fa-circle-o" },
                 { id: "16000", text: "婚姻法规", url: "/Article/Index?k=3", targetType: "iframe-tab", icon: "fa fa-circle-o" },
                 { id: "17000", text: "成功案例", url: "/Article/Index?k=4", targetType: "iframe-tab", icon: "fa fa-circle-o" },
@@ -530,7 +530,7 @@ desired effect
                     icon: "fa fa-circle-o",
                     children: [
                         { id: "18100", text: "离婚知识", url: "/Article/Index?k=5", targetType: "iframe-tab", icon: "fa fa-circle-o" },
-                        { id: "18200", text: "分类", url: "/ArticleSort/List?k=5", targetType: "iframe-tab", icon: "fa fa-circle-o" },
+                        { id: "18200", text: "分类", url: "/ArticleSort/Index?k=5", targetType: "iframe-tab", icon: "fa fa-circle-o" },
                     ]
                 },
                 {
@@ -540,7 +540,7 @@ desired effect
                     icon: "fa fa-circle-o",
                     children: [
                         { id: "19100", text: "继承知识", url: "/Article/Index?k=6", targetType: "iframe-tab", icon: "fa fa-circle-o" },
-                        { id: "19100", text: "分类", url: "/ArticleSort/List?k=6", targetType: "iframe-tab", icon: "fa fa-circle-o" },
+                        { id: "19200", text: "分类", url: "/ArticleSort/Index?k=6", targetType: "iframe-tab", icon: "fa fa-circle-o" },
                     ]
                 },
                 { id: "20000", text: "律师人生", url: "/Article/Index?k=8", targetType: "iframe-tab", icon: "fa fa-circle-o" },
